<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.productdetail.ProductDetailActivity">

    <ScrollView
        android:id="@+id/sv_product_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="ifContentScrolls"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_buy">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:scaleType="fitCenter"
                tools:src="@color/teal_200"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/ib_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="4dp"
                android:src="@drawable/ic_heart_outline"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                app:tint="@color/purple_500"
                app:layout_constraintTop_toBottomOf="@id/iv_product"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:maxLines="2"
                android:ellipsize="end"
                tools:text="@string/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_product"
                app:layout_constraintEnd_toStartOf="@id/ib_favorite" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="8dp"
                android:textColor="@color/white"
                android:background="@drawable/bg_purple_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_name"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <Button
        android:id="@+id/btn_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginEnd="16dp"
        tools:text="Price"
        app:layout_constraintTop_toTopOf="@id/btn_buy"
        app:layout_constraintEnd_toStartOf="@id/btn_buy"
        app:layout_constraintBottom_toBottomOf="@id/btn_buy" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/g_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="sv_product_detail, btn_buy, tv_price" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>