<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bn_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/bn_feed"
        android:icon="@drawable/ic_feed"
        android:title="@string/feed"/>
    <item
        android:id="@+id/bn_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"/>
    <item
        android:id="@+id/bn_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction=""/>
</menu>