<resources>
    <string name="app_name">Simple Shop</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember Me</string>
    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="wording_error">Error Occurred. Please Try Again.</string>
    <string name="share">Share</string>
    <string name="buy">Buy</string>
    <string name="wording_share_product">Buy %s at Simple Shop! Only %s!</string>
    <string name="share_this_product">Share this product</string>
    <string name="wording_empty_history">You haven\'t purchase anything yet.</string>
    <string name="purchase_history">Purchase History</string>
    <string name="facebook_app_id"></string>
    <string name="fb_login_protocol_scheme"></string>
    <string name="wording_login_failed">Login failed, please try again.</string>
    <string name="search">Search</string>
</resources>